<resources>
    <string name="app_name">Pregnancy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_note">Add Note</string>
    <string name="due_date">Due date set up</string>
    <string name="due_date2">Due date</string>
    <string name="due_date_title">Set up due date or the last date of your first period</string>
    <string name="greetings1">Congratulations!You are </string>
    <string name="greetings2">weeks pregnant</string>
    <string name="first_week">1 week \n 1st trimester \n 273 days left</string>
    <string name="second_week">2 weeks,6 days \n 1st trimester \n 260 days left</string>
    <string name="third_week">3 weeks \n 1st trimester \n 259 days left</string>
    <string name="fourth_week">4 weeks \n 1st trimester \n 252 days left</string>
    <string name="fifth_week">5 weeks \n 1st trimester \n 245 days left</string>
    <string name="sixth_week">6 weeks \n 1st trimester \n 238 days left</string>
    <string name="seventh_week">7 weeks \n 1st trimester \n 231 days left</string>
    <string name="eight_week">8 weeks \n 1st trimester \n 224 days left</string>
    <string name="nineth_week">9 weeks \n 1st trimester \n 217 days left</string>
    <string name="ten_week">10 weeks \n 1st trimester \n 210 days left</string>
    <string name="eleven_week">11 weeks \n 1st trimester \n 203 days left</string>
    <string name="twelve_week">12 weeks \n 1st trimester \n 196 days left</string>
    <string name="thirteen_week">13 weeks,6 days \n 1st trimester \n 189 days left</string>
    <string name="fourteen_week">14 weeks \n 2nd trimester \n 182 days left</string>
    <string name="fifteen_week">15 weeks \n 2nd trimester \n 175 days left</string>
    <string name="sixteen_week">16 weeks \n 2nd trimester \n 168 days left</string>
    <string name="seventeen_week">17 weeks \n 2nd trimester \n 161 days left</string>
    <string name="eighteen_week">18 weeks \n 2nd trimester \n 154 days left</string>
    <string name="nineteen_week">19 weeks \n 2nd trimester \n 147 days left</string>
    <string name="twenty_week">20 weeks \n 2nd trimester \n 140 days left</string>
    <string name="twentyone_week">21 weeks \n 2nd trimester \n 133 days left</string>
    <string name="twentytwo_week">22 weeks \n 2nd trimester \n 126 days left</string>
    <string name="twentythree_week">23 weeks \n 2nd trimester \n 119 days left</string>
    <string name="twentyfour_week">24 weeks \n 2nd trimester \n 112 days left</string>
    <string name="twentyfive_week">25 weeks \n 2nd trimester \n 105 days left</string>
    <string name="twentysix_week">26 weeks \n 2nd trimester \n 98 days left</string>
    <string name="twentyseven_week">27 weeks \n 2nd trimester \n 91 days left</string>
    <string name="twentyeight_week">28 weeks \n 3rd trimester \n 84 days left</string>
    <string name="twentynine_week">29 weeks \n 3rd trimester \n 77 days left</string>
    <string name="thirty_week">30 weeks \n 3rd trimester \n 203 70 left</string>
    <string name="thirtyone_week">31 weeks \n 3rd trimester \n 63 days left</string>
    <string name="thirtytwo_week">32 weeks \n 3rd trimester \n 56 days left</string>
    <string name="thirtythree_week">33 weeks \n 3rd trimester \n 49 days left</string>
    <string name="thirtyfour_week">34 weeks \n 3rd trimester \n 42 days left</string>
    <string name="thirtyfive_week">35 weeks \n 3rd trimester \n 35 days left</string>
    <string name="thirtysix_week">36 weeks \n 3rd trimester \n 28 days left</string>
    <string name="thirtyseven_week">37 weeks \n 3rd trimester \n 21 days left</string>
    <string name="thirtyeight_week">38 weeks \n 3rd trimester \n 14 days left</string>
    <string name="thirtynine_week">39 weeks \n 3rd trimester \n 7 days left</string>
    <string name="fourty_week">40 weeks \n 3rd trimester \n a few days left</string>
    <string name="fourtyone_week">41 weeks \n 3rd trimester \n a few days left</string>
    <string name="fourtytwo_week">42 weeks \n 3rd trimester \n a few days left</string>
    <string name="week_1">-</string>
    <string name="week_2">-</string>
    <string name="week_3">-</string>
    <string name="week_4">-</string>
    <string name="week_5">0.12 in from crown to rump</string>
    <string name="week_6">0.2 in from crown to rump</string>
    <string name="week_7">0.47 in from crown to rump</string>
    <string name="week_8">0.63 in from crown to rump</string>
    <string name="week_9">0.91 in from crown to rump</string>
    <string name="week_10">1.22 in from crown to rump</string>
    <string name="week_11">1.61 in from crown to rump</string>
    <string name="week_12">2.13 in from crown to rump</string>
    <string name="week_13">2.91 in from crown to rump</string>
    <string name="week_14">3.43 in from crown to rump</string>
    <string name="week_15">3.98 in from crown to rump</string>
    <string name="week_16"> 4.57 in from crown to rump</string>
    <string name="week_17">5.12 in from crown to rump</string>
    <string name="week_18">5.59 in from crown to rump</string>
    <string name="week_19">6.02 in from crown to rump</string>
    <string name="week_20">10.08 in from head to toe</string>
    <string name="week_21">10.51 in from head to toe</string>
    <string name="week_22">10.94 in from head to toe</string>
    <string name="week_23">11.34 in from head to toe</string>
    <string name="week_24">11.81 in from head to toe</string>
    <string name="week_25">13.62 in from head to toe</string>
    <string name="week_26">14.02 in from head to toe</string>
    <string name="week_27">14.41 in from head to toe</string>
    <string name="week_28">14.76 in from head to toe</string>
    <string name="week_29">15.2 in from head to toe</string>
    <string name="week_30">15.71 in from head to toe</string>
    <string name="week_31">16.18 in from head to toe</string>
    <string name="week_32">16.69 in from head to toe</string>
    <string name="week_33">17.24 in from head to toe</string>
    <string name="week_34">17.72 in from head to toe</string>
    <string name="week_35">18.23 in from head to toe</string>
    <string name="week_36">18.66 in from head to toe</string>
    <string name="week_37">19.09 in from head to toe</string>
    <string name="week_38">19.61 in from head to toe</string>
    <string name="week_39">19.92 in from head to toe</string>
    <string name="week_40">20.16 in from head to toe</string>
    <string name="week_41">20.35 in from head to toe</string>
    <string name="week_42">20.71 in from head to toe</string>
    <string name="week_1oz">-</string>
    <string name="week_2oz">-</string>
    <string name="week_3oz">-</string>
    <string name="week_4oz">-</string>
    <string name="week_5oz">-</string>
    <string name="week_6oz">-</string>
    <string name="week_7oz">0.02-0.04 oz</string>
    <string name="week_8oz">0.04-0.05 oz</string>
    <string name="week_9oz">0.07 oz</string>
    <string name="week_10oz">0.14 oz</string>
    <string name="week_11oz">0.25-0.28 oz</string>
    <string name="week_12oz">0.49 oz</string>
    <string name="week_13oz">0.81-0.85 oz</string>
    <string name="week_14oz">1.48-1.55 oz</string>
    <string name="week_15oz">2.47 oz</string>
    <string name="week_16oz"> 3.53 oz</string>
    <string name="week_17oz">4.87-5.01 oz</string>
    <string name="week_18oz">6.7 oz</string>
    <string name="week_19oz">8.47 oz</string>
    <string name="week_20oz">10.58 oz</string>
    <string name="week_21oz">12.7 oz</string>
    <string name="week_22oz">15.17 oz</string>
    <string name="week_23oz">1.1 lb</string>
    <string name="week_24oz">1.32 lb</string>
    <string name="week_25oz">1.46-1.48 lb</string>
    <string name="week_26oz">1.68 lb</string>
    <string name="week_27oz">1.92-1.94 lb</string>
    <string name="week_28oz">2.2-2.43 lb</string>
    <string name="week_29oz">2.54 lb</string>
    <string name="week_30oz">2.87-2.91 lb</string>
    <string name="week_31oz">3.31 lb</string>
    <string name="week_32oz">3.75 lb</string>
    <string name="week_33oz">4.10-4.41 lb</string>
    <string name="week_34oz">4.74 lb</string>
    <string name="week_35oz">5.25-5.29 lb</string>
    <string name="week_36oz">5.73 lb</string>
    <string name="week_37oz">6.28-6.39 lb</string>
    <string name="week_38oz">6.61-6.83 lb</string>
    <string name="week_39oz">7.05-7.28 lb</string>
    <string name="week_40oz">7.5-7.72 lb</string>
    <string name="week_41oz">7.93 lb</string>
    <string name="week_42oz">8.12 lb</string>
    <string name="week_1size">-</string>
    <string name="week_2size">-</string>
    <string name="week_3size">-</string>
    <string name="week_4size">poppy seed</string>
    <string name="week_5size">seesame seed</string>
    <string name="week_6size">pomegranate seed</string>
    <string name="week_7size">blueberry</string>
    <string name="week_8size">raspberry</string>
    <string name="week_9size">cherry</string>
    <string name="week_10size">green olive</string>
    <string name="week_11size">fig</string>
    <string name="week_12size">lime</string>
    <string name="week_13size">peach</string>
    <string name="week_14size">nectarine</string>
    <string name="week_15size">apple</string>
    <string name="week_16size"> avocado</string>
    <string name="week_17size">pear</string>
    <string name="week_18size">bell pepper</string>
    <string name="week_19size">pomegranate</string>
    <string name="week_20size">ear of corn</string>
    <string name="week_21size">grapefruit</string>
    <string name="week_22size">zucchini</string>
    <string name="week_23size">large mango</string>
    <string name="week_24size">papaya</string>
    <string name="week_25size">pomelo</string>
    <string name="week_26size">eggplant</string>
    <string name="week_27size">cauliflower</string>
    <string name="week_28size">Kabocha squash</string>
    <string name="week_29size">butternut squash</string>
    <string name="week_30size">bunch of bananas</string>
    <string name="week_31size">coconut</string>
    <string name="week_32size">large cabbage</string>
    <string name="week_33size">pineapple</string>
    <string name="week_34size">cantaloupe</string>
    <string name="week_35size">honeydew melon</string>
    <string name="week_36size">bunch of grapes</string>
    <string name="week_37size">swiss chard</string>
    <string name="week_38size">leek</string>
    <string name="week_39size">small pumpkin</string>
    <string name="week_40size">watermelon</string>
    <string name="week_41size">big watermelon</string>
    <string name="week_42size">big watermelon</string>
    <string name="today">today</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="expected">expected</string>
    <string name="Personalization">Personalization</string>
    <string name="Feedback">Feedback</string>
    <string name="Notifications">Notifications</string>
    <string name="SelectLanguage"> Select Language</string>
    <string name="Sendfeedback">Send feedback</string>
    <string name="RateUs">Rate Us</string>
</resources>