<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".33"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_pregnant_header"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="16dp"
         />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".33"
        android:orientation="vertical"
        android:padding="10dp"


        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_title"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last period"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"

                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due date"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".33"
        android:orientation="vertical"
        android:padding="10dp">

        <Button

            android:id="@+id/close"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorRed"
            android:background="#e1c8ba"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="close"
            android:layout_gravity="right"
            />

    </LinearLayout>

</LinearLayout>
