<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/AppToolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:orientation="vertical"
            android:padding="10dp">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                card:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true"


                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Personalization"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:id="@+id/textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image1"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".5"
                            android:text="@string/due_date2"
                            android:textSize="16dp"

                            android:textStyle="bold" />

                        <EditText
android:id="@+id/dueDates"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image1"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".5"
                            android:drawablePadding="10dp"
                            android:drawableRight="@drawable/ic_calendar"
                            android:gravity="right"
                            android:hint="Personalization"
                            android:textSize="16dp"

                            android:textStyle="bold"

                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image1"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".5"
                            android:text="@string/Notifications"
                            android:textSize="16dp"
                            android:textStyle="bold"

                            />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/compatSwitch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".5"
                            android:drawablePadding="15dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image1"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".98"
                            android:text="@string/SelectLanguage"
                            android:textSize="16dp"
                            android:textStyle="bold"

                            />

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/lang_select"
                            android:padding="10dp" />


                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="15dp"
                card:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true"


                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Feedback"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image1"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".98"
                            android:text="@string/Sendfeedback"
                            android:textSize="16dp"
                            android:textStyle="bold"

                            />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".01"
                            android:background="@drawable/right"

                            />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/image1"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".98"
                            android:text="@string/RateUs"
                            android:textSize="16dp"
                            android:textStyle="bold"

                            />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight=".01"
                            android:background="@drawable/right"

                            />


                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"

            android:background="@color/colorPrimaryDark">


        </LinearLayout>

    </LinearLayout>




</LinearLayout>
