<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >


        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            card:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="sahjdjsadsgjdgjsagdj"
                    android:layout_below="@+id/image1"
                    android:layout_alignLeft="@+id/text2"
                    android:layout_alignStart="@+id/text2" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
android:text="sahjdjsadsgjdgjsagdj"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/text1"
                    android:textSize="14dp"
                    android:layout_marginBottom="10dp"
                    />



            </RelativeLayout>



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            card:elevation="4dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <View
                    android:id="@+id/separator"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:background="#c10e0e"
                    android:layout_marginRight="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"

                    >


                    <TextView
                        android:id="@+id/today"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textSize="15dp"
                        android:textColor="@color/colorBlack"
                         />

                    <TextView
                        android:id="@+id/week"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/week"
                        android:textSize="15dp"
                        android:textColor="@color/colorBlack"
                        />

                    <TextView
                        android:id="@+id/month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textSize="15dp"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/expected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expected"
                        android:textSize="15dp"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>






            </LinearLayout>

       <!--     <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"


                <TextView
                    android:id="@+id/today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="Today is your"

                    android:textSize="16dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/today"
                    android:text="you are in your"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/week"
                    android:text="you are in your"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/expected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/month"
                    android:text="Expected delivery date"
                    android:textSize="16dp"
                    android:textStyle="bold" />




            </LinearLayout>-->



        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
